4B/cs444/tests/pass/pass_byte.joos
/* pass: byte */
public class A {
  public A() {}
  protected byte x;
}

