4B/cs444/tests/fail/fail_multiarray.joos
/* fail: multi array */
public class A {
  protected int[][] x;
}

